# studyflow-console

./: CMakeLists.txt  README.md  studyflow.db
include/: dashboard.h  login.h  profile.h  signup.h  subject.h  tasks.h
src/: dashboard.cpp  login.cpp  main.cpp  profile.cpp  signup.cpp  subject.cpp  tasks.cpp
